# fragrans

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: App.cpp  AppComponent.hpp
src/adapter/: AdapterFactory.cpp  AdapterFactory.hpp
src/adapter/simple/: Assembler.cpp  Assembler.hpp  FillingSession.cpp  FillingSession.hpp  const.hpp
src/controller/: Downloader.cpp  Downloader.hpp  Uploader.cpp  Uploader.hpp
src/dto/: UploadDTO.hpp
src/plugin/: ReqInterceptor.cpp  ReqInterceptor.hpp  ResInterceptor.cpp  ResInterceptor.hpp
src/stream/: DownloadFeed.hpp  UploadSession.hpp
